fix align png decoration with tag/category

--- a/themes/jeo-theme/assets/scss/5-pages/_p-archive.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-archive.scss
@@ -151,8 +151,12 @@
            font-size: size(18);
             color: #555D66;
         }
-        .page-description{
-            text-transform: uppercase;
+
+        .category-header{
+            .page-description {
+                display: inline;
+                text-transform: uppercase;
+            }
         }
     }
 
